Upgrade to Tesseract 5.3.3.0